--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-  <script>
-    window.location.href = "https://randomnerd01.github.io/DragonBallLegendsGachaCalculator/";
-  </script>
-  <title>Example title</title>
-  <!-- Other meta tags, stylesheets, or scripts can be added here -->
+    <meta http-equiv="refresh" content="0; url=https://randomnerd01.github.io/DragonBallLegendsGachaCalculator/">
 </head>
 <body>
-  <!-- Content of your page goes here -->
+    <p>This page has moved. If you are not redirected, <a href="https://www.newdomain.com/new-page.html">click here</a>.</p>
 </body>
 </html>
