--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <meta http-equiv="refresh" content="0; url=https://randomnerd01.github.io/DragonBallLegendsGachaCalculator/">
 </head>
 <body>
-    <p>This page has moved. If you are not redirected, <a href="https://www.newdomain.com/new-page.html">click here</a>.</p>
+    <p>This page has moved. If you are not redirected, <a href="https://randomnerd01.github.io/DragonBallLegendsGachaCalculator/">click here</a>.</p>
 </body>
 </html>
