--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="canonical" href="https://randomnerd01.github.io/DragonBallLegendsGachaCalculator/">
     <meta http-equiv="refresh" content="0; url=https://randomnerd01.github.io/DragonBallLegendsGachaCalculator/">
 </head>
 <body>
